updating whitespace for fixed column width

--- a/angular_flask/static/css/main.css
+++ b/angular_flask/static/css/main.css
@@ -11,7 +11,7 @@
 	font-weight: bold;
 }
 
-th, td { white-space: nowrap; }
+th, td { white-space: normal; }
 div.dataTables_wrapper {
     margin: 0 auto;
 }
